Remove docs for private method `createURL`. Refactor method `createURL` and `publish` to work with java 7.